<resources>
    <string name="app_name">Backing Recipe</string>

    <!-- error message -->
    <string name="error_loading_recipe_list">loading_recipe_list_error</string>
    <string name="error_empty_widget">Try to trace your one recipe. This will be your shopping check list.</string>

    <!-- image content description -->
    <string name="content_recipe_item_image">Recipe item image</string>
    <string name="content_step_detail">Step detail</string>

    <!-- label text -->
    <string name="label_ingredients">Ingredients</string>
    <string name="label_steps">Steps</string>
    <string name="label_step_description">Description</string>

    <!-- in program message format -->
    <string name="msg_ingredient_desc">%1$.1f %2$s - %3$s</string>
    <string name="msg_step_desc">Step %1$d: %2$s</string>
    <string name="msg_widget_title">%1$s (for %2$d)</string>
    <string name="msg_trace_recipe">Recipe has been traced. Now you can check shopping list it on home screen widget</string>
    <string name="msg_un_trace_recipe">Recipe has been un-traced. You can trace again anytime. Status will be preserved</string>
    <string name="msg_no_connection">Connect to the Internet to enjoy the video</string>
    <string name="msg_video_loading_error">Video is not available</string>

    <!-- image content description-->
    <string name="content_prev_step">prev step</string>
    <string name="content_next_step">next step</string>
    <string name="content_exo_play">play button</string>
    <string name="content_exo_pause">pause button</string>
    <string name="content_exo_fullscreen">fullscreen button</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- menu item -->
    <string name="menu_item_recipe_trace_button_title">Trace this recipe</string>


</resources>