<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrapper_detail_view"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <ImageView
            android:id="@+id/iv_detail_recipe_image"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_recipe_detail_image"
            android:layout_marginTop="@dimen/space_to_boarder_image"
            android:paddingStart="@dimen/space_to_boarder_image"
            android:paddingEnd="@dimen/space_to_boarder_image"
            android:contentDescription="@string/content_recipe_item_image"
            android:src="@drawable/ic_default_recipe_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail_recipe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/title_text"
            app:layout_constraintBottom_toBottomOf="@+id/iv_detail_recipe_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/colorDarkShadow"
            android:textColor="@android:color/white"
            tools:text="Nutella Pie"/>

        <TextView
            android:id="@+id/tv_detail_label_ingredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/label_text"
            android:text="@string/label_ingredients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_recipe_image" />

        <TextView
            android:id="@+id/tv_detail_ingredient_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_to_boarder_text"
            style="@style/label_context_text"
            android:textAlignment="viewStart"
            tools:text="2 CUP - Graham Cracker crumbs\n6 TBLSP unsalted butter, melted"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_label_ingredients" />

        <TextView
            android:id="@+id/tv_detail_label_steps"
            style="@style/label_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_steps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_ingredient_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recipe_step_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_label_steps" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>