<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@id/exo_play"
        style="@style/ExoMediaButton.Play"
        android:contentDescription="@string/content_exo_play"
        app:layout_constraintBottom_toTopOf="@+id/control_view_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@id/exo_pause"
        style="@style/ExoMediaButton.Pause"
        android:contentDescription="@string/content_exo_pause"
        app:layout_constraintBottom_toTopOf="@+id/control_view_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/control_view_background"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_exo_control_view"
        android:background="@color/colorDarkerShadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </FrameLayout>

    <TextView
        android:id="@id/exo_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_to_boarder_exo_control_button"
        android:layout_marginEnd="@dimen/space_to_button_exo_control_button"
        style="@style/exo_player_text"
        app:layout_constraintBottom_toBottomOf="@+id/control_view_background"
        app:layout_constraintEnd_toStartOf="@+id/exo_progress_placeholder"
        app:layout_constraintStart_toStartOf="@id/control_view_background"
        app:layout_constraintTop_toTopOf="@+id/control_view_background"
        tools:text="2:10" />

    <View
        android:id="@id/exo_progress_placeholder"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_exo_progress_bar"
        android:layout_marginEnd="@dimen/space_to_button_exo_control_button"
        app:layout_constraintBottom_toBottomOf="@+id/control_view_background"
        app:layout_constraintEnd_toStartOf="@+id/exo_duration"
        app:layout_constraintStart_toEndOf="@+id/exo_position"
        app:layout_constraintTop_toTopOf="@+id/control_view_background" />

    <TextView
        android:id="@id/exo_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_to_button_exo_control_button"
        style="@style/exo_player_text"
        app:layout_constraintBottom_toBottomOf="@+id/control_view_background"
        app:layout_constraintEnd_toStartOf="@+id/exo_fullscreen_button"
        app:layout_constraintStart_toEndOf="@+id/exo_progress_placeholder"
        app:layout_constraintTop_toTopOf="@+id/control_view_background"
        tools:text="4:10" />

    <ImageButton
        android:id="@+id/exo_fullscreen_button"
        android:layout_width="@dimen/height_width_exo_full_screen_button"
        android:layout_height="@dimen/height_width_exo_full_screen_button"
        android:layout_marginEnd="@dimen/space_to_boarder_exo_control_button"
        android:background="#00000000"
        android:contentDescription="@string/content_exo_fullscreen"
        android:src="@drawable/exo_controls_fullscreen_enter"
        app:layout_constraintBottom_toBottomOf="@+id/control_view_background"
        app:layout_constraintEnd_toEndOf="@+id/control_view_background"
        app:layout_constraintTop_toTopOf="@+id/control_view_background" />

</androidx.constraintlayout.widget.ConstraintLayout>